# repos_de_infra

./: README.md
internal-tool-infra/: README.md
tarmac/app-incumbent-service/: .gitignore  README.md  app-incumbent-service.sln
tarmac/app-incumbent-staging-db/: Dockerfile  README.md
tarmac/app-mpt-e2e-test/: README.md  cypress.config.js  package-lock.json  package.json
tarmac/app-mpt-postgres-db/: Dockerfile  README.md
tarmac/data-platform-simple-integration-service/: README.md  protogen.sh  pyproject.toml
tarmac/data-platform-simple-integration-service/local-pypi/: databricks_connect-13.0.0-py2.py3-none-any.whl
tarmac/data-platform-simple-integration-service/protobuf/: mapping-service-messages.proto
tarmac/data-platform-simple-integration-service/simple_integration_service/: integration_functions.py  pyspark_proto_helper_functs.py
tarmac/data-platform-simple-integration-service/tests/: fixtures.py  test_integration_functions.py  test_protohelper.py
tarmac/new_pattern24/app-shared-protobuffs/python/: README.md  buf.gen.yaml  create_init_py.sh  pyproject.toml
tarmac/new_pattern24/app-shared-protobuffs/python/src/: .gitignore
tarmac/new_pattern24/app-shared-protobuffs/python/src/cn_proto_utils/: schema_registry.py  spark.py
tarmac/new_pattern24/app-shared-protobuffs/python/test/: test_proto_meta_validation.py  test_proto_metadata_utils.py  test_service.py
tarmac/new_pattern24/data-platform-databricks-common/: .gitignore  .pre-commit-config.yaml  README.md  deploy_job.sh  pyproject.toml
tarmac/new_pattern24/data-platform-databricks-common/.github/workflows/: batch_job_terraform.yml  deidentification_terraform.yml
tarmac/new_pattern24/data-platform-databricks-common/cn_databricks/: deidentification.py  ingestion.py  utils.py
tarmac/new_pattern24/data-platform-databricks-common/cn_databricks/scripts/batch_deidentification/: __main__.py
tarmac/new_pattern24/data-platform-databricks-common/cn_databricks/scripts/batch_ingestion/: __main__.py
tarmac/new_pattern24/data-platform-databricks-common/terraform/batch_jobs/: backend.tf  data.tf  main.tf  prod.tfvars  sdlc.tfvars  variables.tf
tarmac/new_pattern24/data-platform-databricks-common/terraform/deidentification_jobs/: backend.tf  main.tf  prod.tfvars  sdlc.tfvars  variables.tf
tarmac/new_pattern24/data-platform-databricks-common/terraform/modules/batch_deidentification_job/: data.tf  main.tf  outputs.tf  variables.tf
tarmac/new_pattern24/data-platform-databricks-common/terraform/modules/batch_ingestion_job/: data.tf  main.tf  variables.tf
tarmac/new_pattern24/data-platform-databricks-common/tests/: test_deidentification.py
(+4230 files in other folders)
